--- a/.config
+++ b/.config
@@ -7,13 +7,10 @@ CONFIG_TARGET_x86_64_Generic=y
 # CONFIG_GRUB_IMAGES=y
 # CONFIG_EFI_IMAGES=y
 # CONFIG_GRUB_TITLE="OpenWrt"
-# CONFIG_VDI_IMAGES is not set
-# CONFIG_VMDK_IMAGES=y
-# CONFIG_VHD_IMAGES is not set
+CONFIG_VMDK_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
-# CONFIG_TARGET_IMAGES_PAD=y
-CONFIG_TARGET_IMAGES_GZIP=y
-
+# CONFIG_VHD_IMAGES is not set
+# CONFIG_TARGET_IMAGES_GZIP is not set
 
 CONFIG_TARGET_KERNEL_PARTSIZE=30
 CONFIG_TARGET_ROOTFS_PARTSIZE=400
@@ -46,8 +43,8 @@ CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 
 # CONFIG_GRUB_CONSOLE is not set
-# CONFIG_PACKAGE_luci-app-docker=y
-# CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
+# CONFIG_PACKAGE_luci-app-docker is not set
+# CONFIG_PACKAGE_luci-i18n-docker-zh-cn is not set
 
 CONFIG_OPENSSL_ENGINE_CRYPTO=y
 CONFIG_OPENSSL_ENGINE_DIGEST=y
@@ -77,13 +74,18 @@ CONFIG_LUCI_LANG_zh-cn=y
 # Applications
 #
 CONFIG_PACKAGE_luci-app-accesscontrol=y
+# CCONFIG_PACKAGE_luci-app-unblockmusic is not set
+# CCONFIG_PACKAGE_luci-app-unblockneteasemusic-go is not set
+# CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini is not set
+# CONFIG_PACKAGE_luci-app-xlnetacc is not set
+# CONFIG_PACKAGE_luci-app-zerotier is not set
+# CONFIG_PACKAGE_luci-app-dnsforwarder is not set
+# CONFIG_PACKAGE_luci-app-advanced-reboot=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_luci-app-advanced-reboot=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 # CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
 CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-dnsforwarder=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
@@ -93,7 +95,6 @@ CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-softethervpn=y
-CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
@@ -111,8 +112,8 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
-CONFIG_PACKAGE_luci-app-webadmin=y
-CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+# CONFIG_PACKAGE_luci-app-webadmin=y
+# CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
