--- a/.config
+++ b/.config
@@ -61,15 +61,15 @@ CONFIG_OPENSSL_WITH_MDC2=y
 CONFIG_OPENSSL_WITH_RFC3779=y
 CONFIG_OPENSSL_WITH_SEED=y
 CONFIG_OPENSSL_WITH_WHIRLPOOL=y
-CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
-CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
-CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
-CONFIG_OPENVPN_openssl_ENABLE_LZO=y
-CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
-CONFIG_OPENVPN_openssl_ENABLE_PF=y
-CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
-CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
-CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+# CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
+# CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+# CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+# CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+# CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
+# CONFIG_OPENVPN_openssl_ENABLE_PF=y
+# CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+# CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
+# CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 
 CONFIG_LUCI_LANG_zh-cn=y
 
@@ -94,7 +94,7 @@ CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 # CONFIG_PACKAGE_luci-app-ntpc is not set
-CONFIG_PACKAGE_luci-app-openvpn-server=y
+# CONFIG_PACKAGE_luci-app-openvpn-server is not set
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-softethervpn=y
 CONFIG_PACKAGE_luci-app-sqm=y
@@ -114,7 +114,11 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
-# CONFIG_PACKAGE_luci-app-webadmin is not set
+CONFIG_PACKAGE_luci-app-wireguard=y
+# CONFIG_PACKAGE_wireguard-tools=y
+# CONFIG_PACKAGE_kmod-wireguard is not set
+# CONFIG_PACKAGE_luci-proto-wireguard is not set
+# CONFIG_PACKAGE_wireguard is not set
 
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
@@ -131,7 +135,7 @@ CONFIG_PACKAGE_luci-theme-material=y
 # SSH
 #
 # CONFIG_PACKAGE_autossh is not set
-CONFIG_PACKAGE_openssh-client=y
+# CONFIG_PACKAGE_openssh-client=y
 # CONFIG_PACKAGE_openssh-client-utils is not set
 CONFIG_PACKAGE_openssh-keygen=y
 # CONFIG_PACKAGE_openssh-moduli is not set
@@ -147,4 +151,4 @@ CONFIG_PACKAGE_qemu-ga=y
 # CONFIG_PACKAGE_qemu-keymaps is not set
 # CONFIG_PACKAGE_qemu-nbd is not set
 # CONFIG_PACKAGE_qemu-x86_64-softmmu is not set
-CONFIG_PACKAGE_virtio-console-helper=y
+# CONFIG_PACKAGE_virtio-console-helper=y
