--- a/.config
+++ b/.config
@@ -1,5 +1,3 @@
-# OpenWrt Configuration
-#
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
@@ -29,8 +27,6 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_wget=y
-
-CONFIG_BUSYBOX_CONFIG_ACPID=y
 
 # CONFIG_PACKAGE_kmod-fs-exfat=y
 # CONFIG_PACKAGE_kmod-fs-ext4=y
@@ -74,10 +70,11 @@ CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 CONFIG_LUCI_LANG_zh-cn=y
 
 # Applications
-#
+CONFIG_PACKAGE_ACPID=y
+
 CONFIG_PACKAGE_luci-app-accesscontrol=y
-# CCONFIG_PACKAGE_luci-app-unblockmusic is not set
-# CCONFIG_PACKAGE_luci-app-unblockneteasemusic-go is not set
+# CONFIG_PACKAGE_luci-app-unblockmusic is not set
+# CONFIG_PACKAGE_luci-app-unblockneteasemusic-go is not set
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
@@ -114,16 +111,15 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
-CONFIG_PACKAGE_luci-app-wireguard=y
+# CONFIG_PACKAGE_wireguard
+# CONFIG_PACKAGE_luci-app-wireguard=y
 # CONFIG_PACKAGE_wireguard-tools=y
-# CONFIG_PACKAGE_kmod-wireguard is not set
-# CONFIG_PACKAGE_luci-proto-wireguard is not set
-# CONFIG_PACKAGE_wireguard is not set
+# CONFIG_PACKAGE_kmod-wireguard=y
+# CONFIG_PACKAGE_luci-proto-wireguard=y
 
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-material=y
-# CONFIG_PACKAGE_luci-theme-atmaterial=y
 
 # CONFIG_PACKAGE_luci-app-mwan3=y
 # CONFIG_PACKAGE_luci-app-mwan3helper=y
@@ -133,7 +129,6 @@ CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_GRUB_TITLE="OpenWrt AutoBuild by tiewei"
 
 # SSH
-#
 # CONFIG_PACKAGE_autossh is not set
 # CONFIG_PACKAGE_openssh-client=y
 # CONFIG_PACKAGE_openssh-client-utils is not set
