--- a/.config
+++ b/.config
@@ -1,12 +1,13 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
+CONFIG_TARGET_ROOTFS_EXT4FS=y
 # CONFIG_PACKAGE_grub2-efi=y
 # CONFIG_GRUB_IMAGES=y
 # CONFIG_EFI_IMAGES=y
 # CONFIG_GRUB_TITLE="OpenWrt"
 CONFIG_VMDK_IMAGES=y
-CONFIG_QCOW2_IMAGES=y
+# CONFIG_QCOW2_IMAGES=y
 # CONFIG_VHD_IMAGES is not set
 CONFIG_TARGET_IMAGES_GZIP=y
 
@@ -70,7 +71,7 @@ CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 CONFIG_LUCI_LANG_zh-cn=y
 
 # Applications
-CONFIG_PACKAGE_ACPID=y
+# CONFIG_PACKAGE_ACPID=y
 
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
@@ -146,4 +147,4 @@ CONFIG_PACKAGE_qemu-ga=y
 # CONFIG_PACKAGE_qemu-keymaps is not set
 # CONFIG_PACKAGE_qemu-nbd is not set
 # CONFIG_PACKAGE_qemu-x86_64-softmmu is not set
-# CONFIG_PACKAGE_virtio-console-helper=y
+CONFIG_PACKAGE_virtio-console-helper=y
