--- a/.config
+++ b/.config
@@ -1,12 +1,12 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
-CONFIG_TARGET_ROOTFS_EXT4FS=y
+# CONFIG_TARGET_ROOTFS_EXT4FS=y
 # CONFIG_PACKAGE_grub2-efi=y
 # CONFIG_GRUB_IMAGES=y
 # CONFIG_EFI_IMAGES=y
 # CONFIG_GRUB_TITLE="OpenWrt"
-CONFIG_VMDK_IMAGES=y
+# CONFIG_VMDK_IMAGES=y
 # CONFIG_QCOW2_IMAGES=y
 # CONFIG_VHD_IMAGES is not set
 CONFIG_TARGET_IMAGES_GZIP=y
@@ -90,7 +90,7 @@ CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
-CONFIG_PACKAGE_luci-app-nlbwmon=y
+# CONFIG_PACKAGE_luci-app-nlbwmon=y
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 # CONFIG_PACKAGE_luci-app-openvpn-server is not set
 CONFIG_PACKAGE_luci-app-ramfree=y
