--- a/.config
+++ b/.config
@@ -1,38 +1,52 @@
+# 编译x64固件
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
-# CONFIG_TARGET_ROOTFS_EXT4FS=y
-# CONFIG_PACKAGE_grub2-efi=y
-# CONFIG_GRUB_IMAGES=y
-# CONFIG_EFI_IMAGES=y
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+# CONFIG_PACKAGE_grub2-efi is not set
+# CONFIG_GRUB_IMAGES is not set
+# CONFIG_EFI_IMAGES is not set
 # CONFIG_GRUB_TITLE="OpenWrt"
-# CONFIG_VMDK_IMAGES=y
-# CONFIG_QCOW2_IMAGES=y
+# CONFIG_VMDK_IMAGES is not set
+# CONFIG_QCOW2_IMAGES is not set
 # CONFIG_VHD_IMAGES is not set
+# CONFIG_KERNEL_BUILD_USER="tiewei"
+# CONFIG_GRUB_TITLE="OpenWrt AutoBuild by tiewei"
+
+# 固件压缩
 CONFIG_TARGET_IMAGES_GZIP=y
 
+# 设置固件大小
 CONFIG_TARGET_KERNEL_PARTSIZE=30
 CONFIG_TARGET_ROOTFS_PARTSIZE=400
 
+# dnsmasq和IPv6支持
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_dhcp=y
-# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_broken_rtc=y
+# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
+# CONFIG_PACKAGE_ipv6helper=y
 
+# 常用软件包
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_wget=y
+# CONFIG_PACKAGE_tree=y
+# CONFIG_PACKAGE_vim-fuller=y
+# CONFIG_PACKAGE_screen=y
 
+# 多文件系统支持
 # CONFIG_PACKAGE_kmod-fs-exfat=y
 # CONFIG_PACKAGE_kmod-fs-ext4=y
 # CONFIG_PACKAGE_kmod-fs-f2fs=y
 
+# USB3.0支持
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
@@ -41,38 +55,10 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 
-# CONFIG_GRUB_CONSOLE is not set
-# CONFIG_PACKAGE_luci-app-docker is not set
-# CONFIG_PACKAGE_luci-i18n-docker-zh-cn is not set
-
-CONFIG_OPENSSL_ENGINE_CRYPTO=y
-CONFIG_OPENSSL_ENGINE_DIGEST=y
-CONFIG_OPENSSL_WITH_CAMELLIA=y
-CONFIG_OPENSSL_WITH_COMPRESSION=y
-CONFIG_OPENSSL_WITH_DTLS=y
-CONFIG_OPENSSL_WITH_EC2M=y
-CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
-CONFIG_OPENSSL_WITH_GOST=y
-CONFIG_OPENSSL_WITH_IDEA=y
-CONFIG_OPENSSL_WITH_MDC2=y
-CONFIG_OPENSSL_WITH_RFC3779=y
-CONFIG_OPENSSL_WITH_SEED=y
-CONFIG_OPENSSL_WITH_WHIRLPOOL=y
-# CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
-# CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
-# CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
-# CONFIG_OPENVPN_openssl_ENABLE_LZO=y
-# CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
-# CONFIG_OPENVPN_openssl_ENABLE_PF=y
-# CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
-# CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
-# CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-
+# LuCI插件语言
 CONFIG_LUCI_LANG_zh-cn=y
 
-# Applications
-# CONFIG_PACKAGE_ACPID=y
-
+# 常用LuCI插件选择
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic-go is not set
@@ -118,16 +104,16 @@ CONFIG_PACKAGE_luci-app-vsftpd=y
 # CONFIG_PACKAGE_kmod-wireguard=y
 # CONFIG_PACKAGE_luci-proto-wireguard=y
 
+# LuCI主题
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-material=y
 
+# 多拨
 # CONFIG_PACKAGE_luci-app-mwan3=y
 # CONFIG_PACKAGE_luci-app-mwan3helper=y
 # CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
-# CONFIG_KERNEL_BUILD_USER="tiewei"
-# CONFIG_GRUB_TITLE="OpenWrt AutoBuild by tiewei"
 
 # SSH
 # CONFIG_PACKAGE_autossh is not set
@@ -142,9 +128,38 @@ CONFIG_PACKAGE_openssh-server=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 # CONFIG_PACKAGE_sshtunnel is not set
 
+# 虚拟化
 CONFIG_PACKAGE_qemu-ga=y
 # CONFIG_PACKAGE_qemu-img is not set
 # CONFIG_PACKAGE_qemu-keymaps is not set
 # CONFIG_PACKAGE_qemu-nbd is not set
 # CONFIG_PACKAGE_qemu-x86_64-softmmu is not set
 CONFIG_PACKAGE_virtio-console-helper=y
+# CONFIG_PACKAGE_luci-app-docker is not set
+# CONFIG_PACKAGE_luci-i18n-docker-zh-cn is not set
+
+# 其他
+CONFIG_OPENSSL_ENGINE_CRYPTO=y
+CONFIG_OPENSSL_ENGINE_DIGEST=y
+CONFIG_OPENSSL_WITH_CAMELLIA=y
+CONFIG_OPENSSL_WITH_COMPRESSION=y
+CONFIG_OPENSSL_WITH_DTLS=y
+CONFIG_OPENSSL_WITH_EC2M=y
+CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
+CONFIG_OPENSSL_WITH_GOST=y
+CONFIG_OPENSSL_WITH_IDEA=y
+CONFIG_OPENSSL_WITH_MDC2=y
+CONFIG_OPENSSL_WITH_RFC3779=y
+CONFIG_OPENSSL_WITH_SEED=y
+CONFIG_OPENSSL_WITH_WHIRLPOOL=y
+# CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
+# CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+# CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+# CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+# CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
+# CONFIG_OPENVPN_openssl_ENABLE_PF=y
+# CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+# CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
+# CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+# CONFIG_PACKAGE_ACPID=y
+# CONFIG_GRUB_CONSOLE is not set
