--- a/.config
+++ b/.config
@@ -2,6 +2,8 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
+# CONFIG_GRUB_CONSOLE is not set
+# CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 # CONFIG_PACKAGE_grub2-efi is not set
 # CONFIG_GRUB_IMAGES is not set
@@ -59,6 +61,17 @@ CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_LUCI_LANG_zh-cn=y
 
 # 常用LuCI插件选择
+# CONFIG_DEFAULT_luci-app-airplay2=y
+CONFIG_PACKAGE_luci-app-airplay2=n
+# CONFIG_DEFAULT_luci-app-amule=y
+CONFIG_PACKAGE_luci-app-amule=n
+# CONFIG_DEFAULT_luci-app-music-remote-center=y
+CONFIG_PACKAGE_luci-app-music-remote-center=n
+# CONFIG_DEFAULT_luci-app-qbittorrent=y
+CONFIG_PACKAGE_luci-app-qbittorrent=n
+# CONFIG_DEFAULT_luci-app-nlbwmon=y
+CONFIG_PACKAGE_luci-app-nlbwmon=n
+
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic-go is not set
@@ -76,7 +89,6 @@ CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
-# CONFIG_PACKAGE_luci-app-nlbwmon=y
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 # CONFIG_PACKAGE_luci-app-openvpn-server is not set
 CONFIG_PACKAGE_luci-app-ramfree=y
@@ -162,4 +174,3 @@ CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 # CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 # CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 # CONFIG_PACKAGE_ACPID=y
-# CONFIG_GRUB_CONSOLE is not set
