--- a/.config
+++ b/.config
@@ -3,7 +3,7 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
 # CONFIG_GRUB_CONSOLE is not set
-# CONFIG_TARGET_ROOTFS_SQUASHFS is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 # CONFIG_PACKAGE_grub2-efi is not set
 # CONFIG_GRUB_IMAGES is not set
