--- a/.config
+++ b/.config
@@ -3,13 +3,13 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
 # CONFIG_GRUB_CONSOLE is not set
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
+# CONFIG_TARGET_ROOTFS_SQUASHFS=y
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 # CONFIG_PACKAGE_grub2-efi is not set
 # CONFIG_GRUB_IMAGES is not set
 # CONFIG_EFI_IMAGES is not set
 # CONFIG_GRUB_TITLE="OpenWrt"
-# CONFIG_VMDK_IMAGES is not set
+CONFIG_VMDK_IMAGES=y
 # CONFIG_QCOW2_IMAGES is not set
 # CONFIG_VHD_IMAGES is not set
 # CONFIG_KERNEL_BUILD_USER="tiewei"
@@ -61,15 +61,10 @@ CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_LUCI_LANG_zh-cn=y
 
 # 常用LuCI插件选择
-# CONFIG_DEFAULT_luci-app-airplay2=y
 CONFIG_PACKAGE_luci-app-airplay2=n
-# CONFIG_DEFAULT_luci-app-amule=y
 CONFIG_PACKAGE_luci-app-amule=n
-# CONFIG_DEFAULT_luci-app-music-remote-center=y
 CONFIG_PACKAGE_luci-app-music-remote-center=n
-# CONFIG_DEFAULT_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-qbittorrent=n
-# CONFIG_DEFAULT_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-nlbwmon=n
 
 CONFIG_PACKAGE_luci-app-accesscontrol=y
@@ -103,9 +98,11 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_xupnpd=y
 CONFIG_PACKAGE_igmpproxy=y
 CONFIG_PACKAGE_luci-app-udpxy=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
