--- a/.config
+++ b/.config
@@ -7,7 +7,7 @@ CONFIG_TARGET_x86_64_Generic=y
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 # CONFIG_PACKAGE_grub2-efi is not set
 # CONFIG_GRUB_IMAGES is not set
-# CONFIG_EFI_IMAGES is not set
+CONFIG_EFI_IMAGES=n
 # CONFIG_GRUB_TITLE="OpenWrt"
 CONFIG_VMDK_IMAGES=y
 # CONFIG_QCOW2_IMAGES is not set
@@ -82,12 +82,13 @@ CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-flowoffload=y
+CONFIG_PACKAGE_luci-app-flowoffload=n
+CONFIG_PACKAGE_luci-app-sfe=y
 CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 # CONFIG_PACKAGE_luci-app-openvpn-server is not set
 CONFIG_PACKAGE_luci-app-ramfree=y
-CONFIG_PACKAGE_luci-app-softethervpn=y
+CONFIG_PACKAGE_luci-app-softethervpn=n
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
