--- a/.config
+++ b/.config
@@ -7,9 +7,9 @@ CONFIG_TARGET_x86_64_Generic=y
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 # CONFIG_PACKAGE_grub2-efi is not set
 # CONFIG_GRUB_IMAGES is not set
-CONFIG_EFI_IMAGES=n
+# CONFIG_EFI_IMAGES is not set
 # CONFIG_GRUB_TITLE="OpenWrt"
-CONFIG_VMDK_IMAGES=y
+# CONFIG_VMDK_IMAGES is not set
 # CONFIG_QCOW2_IMAGES is not set
 # CONFIG_VHD_IMAGES is not set
 # CONFIG_KERNEL_BUILD_USER="tiewei"
