--- a/.config
+++ b/.config
@@ -1,19 +1,20 @@
 # 编译x64固件
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_Generic=y
-# CONFIG_GRUB_CONSOLE is not set
-# CONFIG_TARGET_ROOTFS_SQUASHFS=y
-# CONFIG_TARGET_ROOTFS_EXT4FS is not set
-# CONFIG_PACKAGE_grub2-efi is not set
-# CONFIG_GRUB_IMAGES is not set
-# CONFIG_EFI_IMAGES is not set
+# CONFIG_TARGET_x86_64_Generic=y
+CONFIG_GRUB_CONSOLE=n
+CONFIG_TARGET_ROOTFS_TARGZ=n
+CONFIG_TARGET_ROOTFS_SQUASHFS=n
+CONFIG_TARGET_ROOTFS_EXT4FS=n
+# CONFIG_PACKAGE_grub2-efi=n
+CONFIG_GRUB_IMAGES=y
+CONFIG_EFI_IMAGES=y
 # CONFIG_GRUB_TITLE="OpenWrt"
-# CONFIG_VMDK_IMAGES is not set
-# CONFIG_QCOW2_IMAGES is not set
-# CONFIG_VHD_IMAGES is not set
+CONFIG_VMDK_IMAGES=y
+CONFIG_QCOW2_IMAGES=n
+CONFIG_VHD_IMAGES=n
 # CONFIG_KERNEL_BUILD_USER="tiewei"
-# CONFIG_GRUB_TITLE="OpenWrt AutoBuild by tiewei"
+CONFIG_GRUB_TITLE="OpenWrt AutoBuild by tiewei"
 
 # 固件压缩
 CONFIG_TARGET_IMAGES_GZIP=y
@@ -170,4 +171,4 @@ CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 # CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 # CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 # CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-# CONFIG_PACKAGE_ACPID=y
+# CONFIG_PACKAGE_ACPID=n
