--- a/.config
+++ b/.config
@@ -1,27 +1,63 @@
 # 编译x64固件
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_Generic=y
-CONFIG_GRUB_CONSOLE=n
-CONFIG_TARGET_ROOTFS_TARGZ=n
-CONFIG_TARGET_ROOTFS_SQUASHFS=n
-CONFIG_TARGET_ROOTFS_EXT4FS=n
-# CONFIG_PACKAGE_grub2-efi=n
+# CONFIG_TARGET_x86_generic is not set
+# CONFIG_TARGET_x86_legacy is not set
+# CONFIG_TARGET_x86_geode is not set
+# CONFIG_TARGET_MULTI_PROFILE is not set
+CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_HAS_SUBTARGETS=y
+CONFIG_HAS_DEVICES=y
+CONFIG_TARGET_BOARD="x86"
+CONFIG_TARGET_SUBTARGET="64"
+CONFIG_TARGET_PROFILE="DEVICE_generic"
+CONFIG_TARGET_ARCH_PACKAGES="x86_64"
+CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe"
+CONFIG_CPU_TYPE=" "
+# CONFIG_LINUX_5_4=y
+CONFIG_HAS_TESTING_KERNEL=y
+CONFIG_HAS_FPU=y
+CONFIG_AUDIO_SUPPORT=n
+CONFIG_GPIO_SUPPORT=y
+CONFIG_PCI_SUPPORT=y
+CONFIG_PCIE_SUPPORT=y
+CONFIG_PCMCIA_SUPPORT=y
+CONFIG_USB_SUPPORT=y
+CONFIG_RTC_SUPPORT=y
+CONFIG_USES_SQUASHFS=y
+CONFIG_ARCH_64BIT=y
+CONFIG_VIRTIO_SUPPORT=y
+CONFIG_USES_ROOTFS_PART=y
+CONFIG_USES_BOOT_PART=y
+CONFIG_x86_64=y
+CONFIG_ARCH="x86_64"
+
+CONFIG_EXTERNAL_CPIO=""
+
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
+CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
+CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 CONFIG_GRUB_IMAGES=y
-CONFIG_EFI_IMAGES=y
-# CONFIG_GRUB_TITLE="OpenWrt"
+CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_GRUB_CONSOLE=y
+CONFIG_GRUB_SERIAL="ttyS0"
+CONFIG_GRUB_BAUDRATE=115200
+# CONFIG_GRUB_FLOWCONTROL is not set
+CONFIG_GRUB_BOOTOPTS=""
+CONFIG_GRUB_TIMEOUT="0"
+CONFIG_GRUB_TITLE="OpenWrt"
+# CONFIG_ISO_IMAGES is not set
+# CONFIG_VDI_IMAGES is not set
 CONFIG_VMDK_IMAGES=y
-CONFIG_QCOW2_IMAGES=n
-CONFIG_VHD_IMAGES=n
-# CONFIG_KERNEL_BUILD_USER="tiewei"
-CONFIG_GRUB_TITLE="OpenWrt AutoBuild by tiewei"
 
 # 固件压缩
 CONFIG_TARGET_IMAGES_GZIP=y
-
 # 设置固件大小
 CONFIG_TARGET_KERNEL_PARTSIZE=30
 CONFIG_TARGET_ROOTFS_PARTSIZE=400
+CONFIG_TARGET_ROOTFS_PARTNAME=""
 
 # dnsmasq和IPv6支持
 CONFIG_PACKAGE_dnsmasq-full=y
@@ -171,4 +207,4 @@ CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 # CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 # CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 # CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-# CONFIG_PACKAGE_ACPID=n
+# CONFIG_PACKAGE_ACPID=y
